--- a/app/config/config.json
+++ b/app/config/config.json
@@ -7,9 +7,7 @@
     },
     "Folders": {
         "Download": "D:/00_Tools/CodeHub/Github/FastX-Gui/app/download",
-        "LocalMusic": [
-            "D:/m-todo/task(J6E3.5)"
-        ]
+        "LocalMusic": []
     },
     "MainWindow": {
         "DpiScale": "Auto",
