增加背景圖片設置功能

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -4,6 +4,13 @@
         "Email": "",
         "RememberMe": true
     },
+    "Background": {
+        "BlurRadius": 8,
+        "DisplayMode": "Keep Aspect Ratio",
+        "ImageEnabled": true,
+        "ImagePath": "C:/Users/91974/Pictures/02 壁纸/金克丝，金克斯，猫，4K壁纸_彼岸图网.jpg",
+        "Opacity": 11
+    },
     "Application": {
         "beta": false,
         "close_window_action": "ask"
@@ -24,7 +31,7 @@
     "personalization": {
         "DpiScale": "Auto",
         "Language": "en_US",
-        "MicaEnabled": true
+        "MicaEnabled": false
     },
     "FastRte": {
         "FastRteDataTypeFolder": "D:/Github/FastX-Gui/i18n.md",
