將主界面調整爲SplitFluentWindow

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -47,6 +47,6 @@
             "PingFang SC"
         ],
         "ThemeColor": "#ff009faa",
-        "ThemeMode": "Light"
+        "ThemeMode": "Dark"
     }
 }
