对于包含可展开卡片的界面，最佳实践是：
- 不要设置固定高度，让容器能够根据内容自动调整大小
- 对于 ExpandSettingCard，确保在添加子卡片后调用 _adjustViewSize() 方法
这样，当卡片展开时，容器会自动扩展以适应子卡片的大小，确保所有内容都能正确显示。

--- a/AppData/config.json
+++ b/AppData/config.json
@@ -1,4 +1,8 @@
 {
+    "ToolsPub": {
+        "RmCommentsInputFolder": "C:/Users/91974/Documents",
+        "RmCommentsOutputFolder": "C:/Users/91974/Pictures"
+    },
     "Register": {
         "ActivationCode": "",
         "Email": "",
@@ -17,7 +21,7 @@
         "WindowSizeMode": "fixed"
     },
     "Material": {
-        "AcrylicBlurRadius": 20
+        "AcrylicBlurRadius": 40
     },
     "software update": {
         "CheckUpdateAtStartUp": true
