feat: 统一浮窗开关逻辑，实现三处控制点状态实时同步
- 将'启动时显示浮窗'改为'浮窗开关'，统一控制浮窗全局状态
- 浮窗开关与 StartupDisplay 配置强绑定
- 使用 cfg.set() 确保配置立即保存到文件
- 添加配置变更监听，自动同步设置页面开关状态
- 修复浮窗位置超出屏幕和状态不同步问题

--- a/AppData/config.json
+++ b/AppData/config.json
@@ -37,6 +37,8 @@
         "LongPressDuration": 500,
         "Opacity": 80,
         "Placement": 1,
+        "PosX": 2059,
+        "PosY": 546,
         "Size": 3,
         "StickToEdge": true,
         "StickToEdgeDisplayStyle": 1,
@@ -50,7 +52,7 @@
     },
     "personalization": {
         "DpiScale": "Auto",
-        "Language": "zh_HK",
+        "Language": "zh_CN",
         "MicaEnabled": true
     },
     "FastRte": {
